src/log/build_2022-08-07_14-49-26/robot_control/stdout_stderr.log
running egg_info
creating ../build/robot_control/robot_control.egg-info
writing ../build/robot_control/robot_control.egg-info/PKG-INFO
writing dependency_links to ../build/robot_control/robot_control.egg-info/dependency_links.txt
writing entry points to ../build/robot_control/robot_control.egg-info/entry_points.txt
writing requirements to ../build/robot_control/robot_control.egg-info/requires.txt
writing top-level names to ../build/robot_control/robot_control.egg-info/top_level.txt
writing manifest file '../build/robot_control/robot_control.egg-info/SOURCES.txt'
reading manifest file '../build/robot_control/robot_control.egg-info/SOURCES.txt'
writing manifest file '../build/robot_control/robot_control.egg-info/SOURCES.txt'
running build
running build_py
creating /home/louis/dev_robot/src/build/robot_control/build
creating /home/louis/dev_robot/src/build/robot_control/build/lib
creating /home/louis/dev_robot/src/build/robot_control/build/lib/robot_control
copying robot_control/path_control.py -> /home/louis/dev_robot/src/build/robot_control/build/lib/robot_control
copying robot_control/__init__.py -> /home/louis/dev_robot/src/build/robot_control/build/lib/robot_control
copying robot_control/motor_control.py -> /home/louis/dev_robot/src/build/robot_control/build/lib/robot_control
copying robot_control/Control_V3.py -> /home/louis/dev_robot/src/build/robot_control/build/lib/robot_control
running install
running install_lib
creating /home/louis/dev_robot/src/install/robot_control/lib/python3.8/site-packages/robot_control
copying /home/louis/dev_robot/src/build/robot_control/build/lib/robot_control/path_control.py -> /home/louis/dev_robot/src/install/robot_control/lib/python3.8/site-packages/robot_control
copying /home/louis/dev_robot/src/build/robot_control/build/lib/robot_control/__init__.py -> /home/louis/dev_robot/src/install/robot_control/lib/python3.8/site-packages/robot_control
copying /home/louis/dev_robot/src/build/robot_control/build/lib/robot_control/motor_control.py -> /home/louis/dev_robot/src/install/robot_control/lib/python3.8/site-packages/robot_control
copying /home/louis/dev_robot/src/build/robot_control/build/lib/robot_control/Control_V3.py -> /home/louis/dev_robot/src/install/robot_control/lib/python3.8/site-packages/robot_control
byte-compiling /home/louis/dev_robot/src/install/robot_control/lib/python3.8/site-packages/robot_control/path_control.py to path_control.cpython-38.pyc
byte-compiling /home/louis/dev_robot/src/install/robot_control/lib/python3.8/site-packages/robot_control/__init__.py to __init__.cpython-38.pyc
byte-compiling /home/louis/dev_robot/src/install/robot_control/lib/python3.8/site-packages/robot_control/motor_control.py to motor_control.cpython-38.pyc
byte-compiling /home/louis/dev_robot/src/install/robot_control/lib/python3.8/site-packages/robot_control/Control_V3.py to Control_V3.cpython-38.pyc
  File "/home/louis/dev_robot/src/install/robot_control/lib/python3.8/site-packages/robot_control/Control_V3.py", line 71
    match self.motor_ctrl_state:
          ^
SyntaxError: invalid syntax

running install_data
creating /home/louis/dev_robot/src/install/robot_control/share/ament_index
creating /home/louis/dev_robot/src/install/robot_control/share/ament_index/resource_index
creating /home/louis/dev_robot/src/install/robot_control/share/ament_index/resource_index/packages
copying resource/robot_control -> /home/louis/dev_robot/src/install/robot_control/share/ament_index/resource_index/packages
copying package.xml -> /home/louis/dev_robot/src/install/robot_control/share/robot_control
running install_egg_info
Copying ../build/robot_control/robot_control.egg-info to /home/louis/dev_robot/src/install/robot_control/lib/python3.8/site-packages/robot_control-1.0.0-py3.8.egg-info
running install_scripts
Installing motor_control script to /home/louis/dev_robot/src/install/robot_control/lib/robot_control
writing list of installed files to '/home/louis/dev_robot/src/build/robot_control/install.log'
